--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
         "tailwindcss": "3.3.3",
         "typescript": "5.1.6",
         "zustand": "^4.3.9"
+    },
+    "devDependencies": {
+        "prettier": "3.0.0"
     }
 }
