--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
+NEXT_PUBLIC_BLOCKCHAIN_URL=https://evm.cronos.org
+# required if you want to connect to walletconnect
 NEXT_PUBLIC_WALLETCONNECT_PROJECTID=
 NEXT_PUBLIC_SIGNIN_MESSAGE="Sign in to your account"
 NEXT_PUBLIC_BLOCKCHAIN_URL=https://evm.cronos.org
+# optional
+NEXT_PUBLIC_INFURA_KEY=
+# optional
+NEXT_PUBLIC_ALCHEMY_KEY=
