--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,7 @@
-NEXT_PUBLIC_BLOCKCHAIN_URL=https://evm.cronos.org
+# could be one of cronosMainnet or cronosTestnet
+NEXT_PUBLIC_BLOCKCHAIN_NETWORK=cronosMainnet
+NEXT_PUBLIC_CRONOS_MAINNET_RPC_URL=https://evm.cronos.org
+NEXT_PUBLIC_CRONOS_TESTNET_RPC_URL=https://evm-t3.cronos.org
 # required if you want to connect to walletconnect
 NEXT_PUBLIC_WALLETCONNECT_PROJECTID=
 NEXT_PUBLIC_SIGNIN_MESSAGE="Sign in to your account"
-NEXT_PUBLIC_BLOCKCHAIN_URL=https://evm.cronos.org
-# optional
-NEXT_PUBLIC_INFURA_KEY=
-# optional
-NEXT_PUBLIC_ALCHEMY_KEY=
