--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,6 @@
     "tabWidth": 4,
     "trailingComma": "all",
     "semi": true,
-    "singleQuote": false
+    "singleQuote": false,
+    "printWidth": 80
 }
