updated web3-wallet to v3

--- a/package.json
+++ b/package.json
@@ -1,46 +1,41 @@
 {
-    "name": "cronos-wallet-connections",
+    "name": "cronos-wallet-connections-v3",
     "version": "0.1.0",
     "private": true,
     "scripts": {
         "dev": "next dev -p 3000",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint",
-        "typechain": "typechain --out-dir contracts/types --target ethers-v5 'contracts/abis/*.json'"
+        "lint": "next lint"
     },
     "dependencies": {
-        "@chakra-ui/icons": "^2.1.0",
-        "@chakra-ui/next-js": "^2.1.5",
-        "@chakra-ui/react": "^2.8.0",
-        "@emotion/react": "^11.11.1",
-        "@emotion/styled": "^11.11.0",
-        "@types/node": "20.4.5",
-        "@types/react": "18.2.16",
-        "@types/react-dom": "18.2.7",
-        "@web3-wallet/defiwallet": "^2.4.1",
-        "@web3-wallet/metamask": "^2.4.1",
-        "@web3-wallet/react": "^2.5.0",
-        "@web3-wallet/trust-wallet": "^2.4.1",
-        "@web3-wallet/walletconnect": "^3.0.1",
-        "@web3modal/ethereum": "^2.7.0",
-        "@web3modal/react": "^2.7.0",
-        "autoprefixer": "10.4.14",
-        "eslint": "8.45.0",
-        "eslint-config-next": "13.4.12",
-        "ethers": "^5.7.2",
-        "framer-motion": "^10.13.1",
-        "next": "13.4.12",
-        "next-auth": "^4.22.3",
-        "pino-pretty": "^10.2.0",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "typescript": "5.1.6",
-        "zustand": "^4.3.9"
+        "@chakra-ui/icons": "^2.1.1",
+        "@chakra-ui/next-js": "^2.2.0",
+        "@chakra-ui/react": "^2.8.2",
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@react-web3-wallet/brave-wallet": "^3.0.0",
+        "@react-web3-wallet/defiwallet": "^3.0.0",
+        "@react-web3-wallet/metamask": "^3.0.0",
+        "@react-web3-wallet/react": "^3.0.0",
+        "@react-web3-wallet/trust-wallet": "^3.0.0",
+        "@react-web3-wallet/walletconnect": "^4.0.0",
+        "ethers": "^6.12.1",
+        "framer-motion": "^11.2.0",
+        "next": "14.2.3",
+        "next-auth": "^4.24.7",
+        "pino-pretty": "^11.0.0",
+        "react": "^18",
+        "react-dom": "^18",
+        "zustand": "^4.5.2"
     },
     "devDependencies": {
-        "@typechain/ethers-v5": "^11.1.1",
-        "prettier": "3.0.0",
-        "typechain": "^8.3.1"
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.3",
+        "typechain": "^8.3.2",
+        "typescript": "^5"
     }
 }
